# db-query-1

./: .gitignore  EXPORT_FEATURE.md  INSTALL.md  Makefile  README.md  USAGE_GUIDE.md  WEEK2_EXPORT_FEATURE_SUMMARY.md  instrument.md  pyproject.toml  start.bat  test_export.py  test_export_csv.json  test_export_json.json
backend/: .gitignore  README.md  run_migrations.py  test_app.py  test_mysql_connection.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/v1/: databases.py  queries.py
backend/app/models/: __init__.py  database.py  metadata.py  query.py  schemas.py
backend/app/services/: db_connection.py  export.py  metadata.py  nl2sql.py  query.py  sql_validator.py
backend/db/: db_query.db
backend/tests/: conftest.py
backend/tests/contract/: __init__.py
fixtures/: README.md  test.rest  testdb.db
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/: MetadataTree.tsx  NaturalLanguageInput.tsx  QueryHistory.tsx  ResultTable.tsx  SqlEditor.tsx
frontend/src/hooks/: useNaturalLanguage.ts  useQueryExecution.ts
frontend/src/pages/databases/: create.tsx  edit.tsx  list.tsx  show.tsx
frontend/src/services/: api.ts
frontend/src/types/: database.ts  metadata.ts  query.ts
scripts/: README.md  fix-and-install.bat  install-dependencies.bat  install-manual.bat  start-all.bat  start-backend.bat  start-frontend.bat  stop-all.bat
(+1 files in other folders)
